[project]
name = "pr-summary-github-action"
version = "0.1.0"
description = "Github action to summarize PRs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "anthropic==0.40.0",
    "openai==1.55.3",
    "pytest==8.3.3",
    "nltk==3.9.1",
    "markdown-it-py==3.0.0",
    "google-genai==1.2.0",
]
